
Enhancements:

 - New Korean translation available (Thanks to Youngwoo Kim)

Bug-Fixes:

2645286: Quotes missing in squirrel-sql.sh (Thanks to mdykierek for the patch)
2531193: Oracle create table script the "ON UPDATE" is wrong
2644778: "Contents Tab SQL filter" and "Limit cell edit WHERE clause size" dialogs didn't work

Other reported bug-fixes:

 - Fixed bug which occurred when generating FK SQL for DB2 where the update and delete action clause result 
   in syntax error for certain standard constraint actions.
 
 - Fixed the case of the install directory (java -> Java) to match the case of the directory created by the 
   installer. 

 - NullPointerException occured when last tab was closed

 - Fixed several problems when Schemas where cached. For example, "Contents Tab SQL filter" and 
   "Limit cell edit WHERE clause size" dialogs did not open.

 - Fixed a problem where when certain windows were closed (for example, the Session Properties window) the 
   first tab was always selected

3.0 (2/21/2009)
==============

Enhancements: 

Dataimport Plugin:
  * SuggestColumns: if columns in database and in the first line of the file
    are equal, they are matched for the import.

Sybase Plugin:
  * New ExceptionFormatter for SQLWarnings: better viewing warnings while the parameter
    showplan is on (set showplan on) 

Look an Feel Plugin:
  * Made Nimbus look and feel available (needs at least JDK/JRE 1.6.0_10)
  * Made Metal look and feel with Ocean theme the default (used at first start up).
  * Added warning message that look and feels other than Metal may cause perfomance and/or functional problems


Updated Italian translation (Ivo Neri), Chinese translation (xpdz), French translation (Erwan Duroselle)

New user interface layout: Tabbed layout

Hibernate Plugin:
   - Cleaned up details display in mapped objects tab: Now every tree node displays an appropriate details table.